Docker run successful
Signed-off-by: Phillip Lopez <plopez@qualityworkscg.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.pythonPath": "venv/bin/python",
     "python.testing.pytestArgs": [
-        "venv"
+        "tests"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
